tdf#167616 EMF Add support for EMR_ANGLEARC record

Change-Id: Ic872f80b2a318ac7c0f3b0cbdb4ad285795989c8
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/188865
Tested-by: Jenkins
Reviewed-by: Bartosz Kosiorek <gang65@poczta.onet.pl>
(cherry picked from commit 1b68f859034ecc2342a772685d6563fa1ad71f7f)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/189091
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>